--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,42 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+}
+
+.card-outside {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  width: 170px;
+  display: flex;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  margin:30px;
+  border-radius:12px;
+  box-shadow:0px 0px 51px 0px rgba(0, 0, 0, 0.08), 
+             0px 6px 18px 0px rgba(0, 0, 0, 0.05);
+}
+  
+.card-description {
+  display: flex;
+  border-radius:0px 0px 12px 12px;
+  padding:12px;
+  text-align: left;
+  text-transform: uppercase;
 }
 
-.App-link {
-  color: #61dafb;
+.card-color-from {
+  display: flex;
+  color:#929197;
+  display: block;
+  padding:0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-color-to {
+  display: flex;
+  color:rgb(3, 150, 255);
 }
